--- a/arch/stm32/stm32.ini
+++ b/arch/stm32/stm32.ini
@@ -1,7 +1,8 @@
 [stm32_base]
 extends = arduino_base
 platform = ststm32
-platform_packages = platformio/framework-arduinoststm32@https://github.com/stm32duino/Arduino_Core_STM32.git#ea74156acd823b6d14739f389e6cdc648f8ee36e
+platform_packages = platformio/framework-arduinoststm32@https://github.com/Stary2001/Arduino_Core_STM32.git#df002155b9542cd6c73ba7f6400f8869b3445b1a
+
 
 build_type = release
 
@@ -13,13 +14,14 @@ build_flags =
   -Isrc/platform/stm32wl -g
   -DMESHTASTIC_MINIMIZE_BUILD
   -DMESHTASTIC_EXCLUDE_GPS
-  -DDEBUG_MUTE
+;  -DDEBUG_MUTE
 ;  -DVECT_TAB_OFFSET=0x08000000
   -DconfigUSE_CMSIS_RTOS_V2=1
 ;  -DSPI_MODE_0=SPI_MODE0
   -fmerge-all-constants
   -ffunction-sections
   -fdata-sections
+  -DPIO_FRAMEWORK_ARDUINO_NANOLIB_FLOAT_PRINTF
   
 build_src_filter = 
   ${arduino_base.build_src_filter} -<platform/esp32/> -<nimble/> -<mesh/api/> -<mesh/wifi/> -<mesh/http/> -<modules/esp32> -<mesh/eth/> -<input> -<buzz> -<modules/RemoteHardwareModule.cpp> -<platform/nrf52> -<platform/portduino> -<platform/rp2xx0> -<mesh/raspihttp>
