--- a/variants/wio-e5/platformio.ini
+++ b/variants/wio-e5/platformio.ini
@@ -6,6 +6,7 @@ build_flags =
   ${stm32_base.build_flags}
   -Ivariants/wio-e5
   -DSERIAL_UART_INSTANCE=1
+  -DENABLE_HWSERIAL2
   -DPIN_SERIAL_RX=PB7
   -DPIN_SERIAL_TX=PB6
   -DPIN_WIRE_SDA=PA15
@@ -15,10 +16,13 @@ build_flags =
   -DRADIOLIB_EXCLUDE_SX128X=1
   -DRADIOLIB_EXCLUDE_SX127X=1
   -DRADIOLIB_EXCLUDE_LR11X0=1
-  -DHAS_SENSOR
+  -DHAS_SENSOR=1
+  -DHAS_LTE=1
 
 upload_port = stlink
 
 lib_deps =
   ${stm32_base.lib_deps}
   # Add your custom sensor here!
+  # renovate: datasource=custom.pio depName=Adafruit SHT31 packageName=adafruit/library/Adafruit SHT31 Library
+  adafruit/Adafruit SHT31 Library@2.2.2
