--- a/arch/stm32/stm32.ini
+++ b/arch/stm32/stm32.ini
@@ -22,7 +22,7 @@ build_flags =
   -DMESHTASTIC_EXCLUDE_INPUTBROKER=1
   -DMESHTASTIC_EXCLUDE_POWERMON=1
   -DMESHTASTIC_EXCLUDE_SCREEN=1
-  -DMESHTASTIC_EXCLUDE_MQTT=1
+;  -DMESHTASTIC_EXCLUDE_MQTT=1
   -DMESHTASTIC_EXCLUDE_BLUETOOTH=1
   -DMESHTASTIC_EXCLUDE_GPS=1
   -DMESHTASTIC_EXCLUDE_WIFI=1
