--- a/arch/stm32/stm32.ini
+++ b/arch/stm32/stm32.ini
@@ -24,11 +24,11 @@ build_flags =
   -DMESHTASTIC_EXCLUDE_SCREEN=1
 ;  -DMESHTASTIC_EXCLUDE_MQTT=1
   -DMESHTASTIC_EXCLUDE_BLUETOOTH=1
-  -DMESHTASTIC_EXCLUDE_GPS=1
+;  -DMESHTASTIC_EXCLUDE_GPS=1
   -DMESHTASTIC_EXCLUDE_WIFI=1
   -DMESHTASTIC_EXCLUDE_TZ=1 ; Exclude TZ to save some flash space.
   -DPIO_FRAMEWORK_ARDUINO_NANOLIB_FLOAT_PRINTF ; This is REQUIRED for at least traceroute debug prints - without it the length ends up uninitialized.
-  ;-DDEBUG_MUTE
+  -DDEBUG_MUTE
   -fmerge-all-constants
   -ffunction-sections
   -fdata-sections
