Initial commit of Smart Response XE x NRF52 variant

--- a/variants/diy/platformio.ini
+++ b/variants/diy/platformio.ini
@@ -89,6 +89,19 @@ extra_scripts =
   ${env.extra_scripts}
   variants/diy/nrf52_promicro_diy_tcxo/custom_build_tasks.py ; Add to PIO's Project Tasks pane: preset builds for common displays
 
+; This has a Pro Micro in it. Yeah. Sure
+[env:smart_response_xe]
+extends = nrf52840_base
+board = promicro-nrf52840
+build_flags = ${nrf52840_base.build_flags}
+  -I variants/diy/smart_response_xe
+  -D NRF52_PROMICRO_DIY
+  -D SMART_RESPONSE_XE
+build_src_filter = ${nrf52_base.build_src_filter} +<../variants/diy/smart_response_xe>
+lib_deps = 
+  ${nrf52840_base.lib_deps}
+debug_tool = jlink
+
 ; Seeed Xiao BLE: https://www.digikey.com/en/products/detail/seeed-technology-co-ltd/102010448/16652893
 [env:xiao_ble]
 extends = env:seeed_xiao_nrf52840_kit
